fix scrollbar
fix scrollbar

--- a/src/styles/newsFeed.css
+++ b/src/styles/newsFeed.css
@@ -1,45 +1,31 @@
+.scrolling-wrapper {
+  display: flex !important;
+  flex-direction: row !important;
+  overflow-x: auto;
+  column-gap: 1rem;
+  width: 100%;
 
+  scrollbar-color: var(--dark-color) white; /* thumb and track color */
+  scrollbar-width: thin;
+}
 
+.news-card {
+  min-width: 18rem;
+  min-height: 110px;
+}
 
-  .scrolling-wrapper {
-    display: flex !important;
-    flex-direction: row !important;
-    overflow-x: auto;
-    column-gap: 1rem;
+.scrolling-wrapper::-webkit-scrollbar {
+  height: 1rem;
+}
 
-    width: 100%;
-  }
+.scrolling-wrapper::-webkit-scrollbar-thumb {
+  background: var(--bs-green);
+  box-shadow: inset 2px 2px 5px 0 rgba(rgb(255, 254, 254), 0.5);
 
+  border-top: 0.8rem white solid;
+  background-clip: padding-box;
+}
 
-
-  .news-card{
-    min-width: 18rem;
-    min-height: 110px;
-
-  }
-
-
-
-  .scrolling-wrapper::-webkit-scrollbar {
-    height: .6rem;   
-    padding: 30px;
-  }
-   
-
-  .scrolling-wrapper::-webkit-scrollbar-thumb {
-    background: var(--bs-green); 
-    border-radius: 10px;
-    height: 1rem;   
-    box-shadow: inset 2px 2px 5px 0 rgba(rgb(255, 254, 254), 0.5);
-  }
-  
-
-  .scrolling-wrapper::-webkit-scrollbar-thumb:hover {
-    background: var( --dark-color); 
-  }
-
-
-  .scrolling-wrapper::-webkit-scrollbar-track {
-    background-color: #e4e4e4;
-    border-radius: 100px;
+.scrolling-wrapper::-webkit-scrollbar-thumb:hover {
+  background: var(--dark-color);
 }
